--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,3 +1,7 @@
+.html {
+  background-color: white;
+}
+
 .logo {
 display: flex
 color: MediumAquamarine;
@@ -5,10 +9,16 @@ color: MediumAquamarine;
 
 .navigation {
 display: flex;
+display: inline-block;
 }
 
 .header  {
 font-family: Verdada;
 font-size: 14px;
-fonr-weight: bold;
+font-weight: bold;
+color: MediumAquamarine;
+}
+.a {
+  font-size: 18px;
+  color: black;
 }
