--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -2,23 +2,102 @@
   background-color: white;
 }
 
+
+
+
+
+
+header{
+  display: flex;
+  align-items: center;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 80px;
+  border-bottom: 1px solid black;
+  background-color: white;
+  font-family: Verdana;
+  font-size: 14px;
+  font-weight: bold;
+
+
+}
 .logo {
-display: flex
-color: MediumAquamarine;
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  padding-left: 30px;
 }
+.logo img {
+  margin-right: 12px;
+}
+.mytimes {
+  color:Mediumaqumarine
+}
+.logo p {
+  color: MediumAquamarine;}
 
-.navigation {
-display: flex;
-display: inline-block;
-}
+  }
+  header nav {
+    padding-right: 40px;
+  }
+  nav span {
+    padding: 20px 10px;
+  }
+  header a{ color: black;}
 
-.header  {
-font-family: Verdada;
-font-size: 14px;
-font-weight: bold;
-color: MediumAquamarine;
-}
-.a {
-  font-size: 18px;
-  color: black;
-}
+  .main {
+    display: flex;
+
+
+    .column. large {
+      width: 630px;
+    }
+  .column. medium {
+    width: 300px}
+  .column. small  {
+    width: 240px;
+  }
+  footer {
+    display: flex;
+    align-items: center;
+    justifty-content: center;
+    justify-direction: column;
+    width==:100%;
+    height: 300px;
+    Background-color:MediumAquamarine;
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+  }
+
+  footer .title {
+    display: inline-block;
+    padding-right: 25px;
+    border-right: 2px solid white;
+    font-family: Georgia;
+    font-size: 16px;
+    font-weight: bold'
+    color: white;
+  }
+  footer nav {
+    display: inline-block;
+    padding-left: 25px
+  }
+  nav span {
+    display:inline-block;
+    padding: 20px 10px;
+  }
+  footer a {
+    color:black;}
+  }
+
+
+
+
+
+
+
+  }
+
+  }
