--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -48,50 +48,57 @@ header{
 
   .main {
     display: flex;
+    flex-wrap:wrap;
+    justify-content:center;
+    margin-bottom: 85px;
+    padding-top:120px;
+  }
 
 
-    .column. large {
+
+  .large {
+    display: flex;
+    boarder: 2px solid blue;
+    flex-wrap: wrap;
+    width: 630px;
+    margin-right: 30px;
+    justify-content: space-inbetween;
+  }
+  .medium {
+    display: flex;
+    boarder: 2px solid blue;
+  }
+  .small {
+    display: flex;
+    boarder: 2px solid blue;
+  }
+
+    .column.large {
       width: 630px;
     }
-  .column. medium {
+  .column.medium {
     width: 300px}
-  .column. small  {
+  .column.small  {
     width: 240px;
   }
-  footer {
-    display: flex;
-    align-items: center;
-    justifty-content: center;
-    justify-direction: column;
-    width==:100%;
-    height: 300px;
-    Background-color:MediumAquamarine;
-    font-size: 16px;
-    font-weight: bold;
-    color: white;
-  }
+.image {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 45px;
+  color: white;
+  background-image:url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
+  height:300px;
+  font-family:Georgia;
+  font-weight:bold;
+}
 
-  footer .title {
-    display: inline-block;
-    padding-right: 25px;
-    border-right: 2px solid white;
-    font-family: Georgia;
-    font-size: 16px;
-    font-weight: bold'
-    color: white;
-  }
-  footer nav {
-    display: inline-block;
-    padding-left: 25px
-  }
-  nav span {
-    display:inline-block;
-    padding: 20px 10px;
-  }
-  footer a {
-    color:black;}
-  }
+.text {
+  font-size: 17px;
+  color-black;
+  font-family:Georgia;
 
+}
 
 
 
