--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -1,6 +1,6 @@
-.html {
-  background-color: white;
-}
+
+
+
 
 
 
@@ -50,48 +50,43 @@ header{
     display: flex;
     flex-wrap:wrap;
     justify-content:center;
-    margin-bottom: 85px;
-    padding-top:120px;
+    margin-bottom: 78px;
+    padding-top:116px;
   }
 
 
 
-  .large {
+  .large-column{
     display: flex;
     boarder: 2px solid blue;
     flex-wrap: wrap;
     width: 630px;
     margin-right: 30px;
-    justify-content: space-inbetween;
+    justify-content: space-between;
   }
-  .medium {
-    display: flex;
-    boarder: 2px solid blue;
+  .medium-column {
+    width:300px;
+    margin-right: 32px;
   }
-  .small {
-    display: flex;
-    boarder: 2px solid blue;
+  .small-column {
+    width:240px;
+    margin-right: 32px;
   }
 
-    .column.large {
-      width: 630px;
-    }
-  .column.medium {
-    width: 300px}
-  .column.small  {
-    width: 240px;
-  }
-.image {
+
+.lead .image-text {
   display: flex;
+  flex-grow: 1;
   justify-content: center;
   flex-direction: column;
-
-  font-size: 45px;
+  text-align:left;
+  font-size: 40px;
   color: white;
-  background-image:url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
+  background-image:url(/images/image-background.png);
   height:300px;
   font-family:Georgia;
   font-weight:bold;
+  margin-top:0;
 }
 
 .text {
@@ -101,11 +96,20 @@ header{
 
 }
 
+.narrative {
+  font-size: 17px;
+  color:black;
+  font-family:Georgia;
+}
+.image span {
+  margin-left; 20px;
+}
+.image-story-1 {
+  background-image: url(../images/image-story-1.png);}
+.image-story-2 {
+  background-image: url(../images/image-story-2.png);
+}
+.image-story-3 {
+  background-image: url(../images/image-story-3.png);
 
-
-
-
-
-  }
-
-  }
+}
